# YunaProtocol

./: CMakeLists.txt  library.json
core/: CMakeLists.txt
core/include/: Packet.h  Transport.h  YunaNode.h
core/src/: Packet.cpp  Transport.cpp  YunaNode.cpp
tests/: CMakeLists.txt  main.cpp
